error.log
warning: associated function `resolve` is never used
  --> crates\lune-utils\src\path\luau.rs:33:8
   |
32 | impl LuauFilePath {
   | ----------------- associated function in this implementation
33 |     fn resolve(module: impl AsRef<Path>) -> Result<Self, LuaNavigateError> {
   |        ^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `lune-utils` (lib) generated 1 warning
    Checking lune-std-tauri v0.0.1 (D:\Repos\lune\crates\lune-std-tauri)
warning: field `config` is never read
  --> crates\lune-std-tauri\src\lib.rs:27:5
   |
26 | struct TauriApp {
   |        -------- field in this struct
27 |     config: Arc<TauriConfig>,
   |     ^^^^^^
   |
   = note: `TauriApp` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: multiple fields are never read
  --> crates\lune-std-tauri\src\lib.rs:33:5
   |
32 | struct TauriConfig {
   |        ----------- fields in this struct
33 |     name: String,
   |     ^^^^
34 |     identifier: String,
   |     ^^^^^^^^^^
35 |     version: String,
   |     ^^^^^^^
36 |     icon: Option<String>,
   |     ^^^^
37 |     html: Option<String>,
   |     ^^^^
38 |     window_title: String,
   |     ^^^^^^^^^^^^
39 |     window_width: u32,
   |     ^^^^^^^^^^^^
40 |     window_height: u32,
   |     ^^^^^^^^^^^^^
   |
   = note: `TauriConfig` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: `lune-std-tauri` (lib) generated 2 warnings
    Checking lune-std v0.3.4 (D:\Repos\lune\crates\lune-std)
warning: unused import: `async_fs::read as read_file`
 --> crates\lune-std\src\require\loader.rs:9:5
  |
9 | use async_fs::read as read_file;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `fs::read as read_file`
 --> crates\lune-std\src\require\resolver.rs:2:5
  |
2 |     fs::read as read_file,
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: `lune-std` (lib) generated 2 warnings (run `cargo fix --lib -p lune-std` to apply 2 suggestions)
    Checking lune v0.10.4-tauri (D:\Repos\lune\crates\lune)
error[E0599]: no method named `write_all` found for struct `ZipWriter<W>` in the current scope
    --> crates\lune\src\standalone\metadata.rs:75:17
     |
  75 |             zip.write_all(&bytecode)?;
     |                 ^^^^^^^^^
     |
    ::: C:\Users\UwUor\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\std\src\io\mod.rs:1835:8
     |
1835 |     fn write_all(&mut self, mut buf: &[u8]) -> Result<()> {
     |        --------- the method is available for `ZipWriter<std::io::Cursor<&mut Vec<u8>>>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: trait `Write` which provides `write_all` is implemented but not in scope; perhaps you want to import it
     |
   1 + use std::io::Write;
     |
help: there is a method `write` with a similar name
     |
  75 -             zip.write_all(&bytecode)?;
  75 +             zip.write(&bytecode)?;
     |

error[E0599]: no method named `write_all` found for struct `ZipWriter<W>` in the current scope
    --> crates\lune\src\standalone\metadata.rs:80:21
     |
  80 |                 zip.write_all(&content)?;
     |                     ^^^^^^^^^
     |
    ::: C:\Users\UwUor\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\std\src\io\mod.rs:1835:8
     |
1835 |     fn write_all(&mut self, mut buf: &[u8]) -> Result<()> {
     |        --------- the method is available for `ZipWriter<std::io::Cursor<&mut Vec<u8>>>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: trait `Write` which provides `write_all` is implemented but not in scope; perhaps you want to import it
     |
   1 + use std::io::Write;
     |
help: there is a method `write` with a similar name
     |
  80 -                 zip.write_all(&content)?;
  80 +                 zip.write(&content)?;
     |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `lune` (bin "lune") due to 2 previous errors
